minor review fixes

--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
@@ -29,4 +29,6 @@
 <br>
 <br>
 <!-- Review area-->
+<div *ngIf="isLoggedIn">
 <app-review productId="{{product.id}}" productName="{{product.name}}"></app-review>
+</div>
